# variational-auto-encoder

./: .gitignore  README.md  compare.py  inference.py  model.py  pyproject.toml  train.py  vae_mnist.pth
data_tools/: __init__.py  load_npz_dataset.py
scripts/: load_npz_dataset.py
src/variational_auto_encoder/: __init__.py  model.py  train.py  utils.py
src/variational_auto_encoder/data_tools/: __init__.py
src/variational_auto_encoder/scripts/: evaluate.py  generate.py  load_npz_dataset.py  train_vae.py
utils/: determinism.py  device.py
