[project]
name = "variational-auto-encoder"
version = "0.1.0"
description = "create synthetic data for retinal fundus images"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
]

[project.scripts]
load-dataset = "scripts.load_npz_dataset:cli"


